--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,6 +10,10 @@ jobs:
       matrix:
         python: [3.7, 3.8]
 
+    defaults:
+        run:
+            working-directory: ./backend
+
     steps:
       - uses: actions/checkout@v2
 
